JBIDE-8707 maven configurators have redundant names
git-svn-id: https://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.2.x@30460 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.jsf/plugin.properties
+++ b/maven/plugins/org.jboss.tools.maven.jsf/plugin.properties
@@ -1,3 +1,3 @@
 Bundle-Vendor = JBoss by Red Hat
 Bundle-Name = JBoss Maven JSF Configurator
-JSF_Project_configurator = JSF Project configurator
+JSF_Project_configurator = JSF
