--- a/maven/plugins/org.jboss.tools.maven.seam/plugin.properties
+++ b/maven/plugins/org.jboss.tools.maven.seam/plugin.properties
@@ -1,4 +1,5 @@
 #Properties file for org.jboss.tools.maven.seam
 Bundle-Vendor = JBoss by Red Hat
 Bundle-Name = Integration Seam projects with Maven
-Seam_Project_configurator = Seam Project configurator
+Seam_Project_configurator = Seam
+Fix_classpath = Fixing classpath
