--- a/maven/plugins/org.jboss.tools.maven.portlet/plugin.properties
+++ b/maven/plugins/org.jboss.tools.maven.portlet/plugin.properties
@@ -1,3 +1,3 @@
 Bundle-Vendor = JBoss by Red Hat
 Bundle-Name = JBoss Maven Portlet Configurator
-Portlet_Project_configurator = Portlet Project configurator
+Portlet_Project_configurator = Portlet
