JBIDE-8707 maven configurators have redundant names
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30461 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.seam/plugin.xml
+++ b/maven/plugins/org.jboss.tools.maven.seam/plugin.xml
@@ -30,9 +30,9 @@
     
     <extension point="org.eclipse.m2e.core.projectConfigurators">
       <configurator 
-          id="org.jboss.tools.maven.seam.configurator.fixClasspathConfigurator"
+          id="org.jboss.tools.maven.seam.configuringator.fixClasspathConfigurator"
           class="org.jboss.tools.maven.seam.configurators.FixClasspathConfigurator"
-          name="%Seam_Project_configurator" 
+          name="%Fix_classpath" 
           secondaryTo="org.eclipse.m2e.jdt.javaConfigurator"/>
     </extension>
     
