--- a/modeshape/plugins/org.jboss.tools.modeshape.rest/build.properties
+++ b/modeshape/plugins/org.jboss.tools.modeshape.rest/build.properties
@@ -21,7 +21,8 @@ bin.includes = META-INF/,\
                .,\
                about.html,\
                jcip-annotations.jar,\
-               modeshape-client.jar
+               modeshape-client.jar,\
+               .options
 jars.compile.order = .
 source.. = src/
 output.. = bin/
