JBIDE-8706 Logging Of the SLF4J ModeShape Logging Does Not Adhere To Eclipse Log Levels. Changed SLF4J trace logging to only log if Eclipse is in debug mode and this plugin's "/debug" option has been set to "true." The log levels of error, warning, and info are filtered out of the Error View by using settings available via the view's preferences but are always logged by Eclipse.
git-svn-id: https://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.2.x@30470 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/modeshape/plugins/org.jboss.tools.modeshape.rest/build.properties
+++ b/modeshape/plugins/org.jboss.tools.modeshape.rest/build.properties
@@ -21,8 +21,8 @@ bin.includes = META-INF/,\
                .,\
                about.html,\
                jcip-annotations.jar,\
-               modeshape-client.jar
-src.includes = src/
+               modeshape-client.jar,\
+               .options
 jars.compile.order = .
 source.. = src/
 output.. = bin/
