--- a/tests/plugins/pom.xml
+++ b/tests/plugins/pom.xml
@@ -1,5 +1,5 @@
-<project
- xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jboss.tools</groupId>
 	<artifactId>org.jboss.tools.tests.plugins</artifactId>
@@ -7,5 +7,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
-		<module>org.jboss.tools.tests</module><module>org.jboss.tools.ui.bot.ext</module><module>org.jboss.tools.ui.bot.ext.test</module></modules>
+		<module>org.jboss.tools.tests</module>
+		<module>org.jboss.tools.ui.bot.ext</module>
+		<module>org.jboss.tools.ui.bot.ext.test</module>
+	</modules>
 </project>
