add latestversiononly=true and eclipse.p2.mirrors=false
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30577 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/updates/requirements/mylyn/build.xml
+++ b/download.jboss.org/jbosstools/updates/requirements/mylyn/build.xml
@@ -31,7 +31,7 @@
 				<repository location="${URL2}" />
 			</source>
 
-			<slicingOptions includeFeatures="true" followStrict="true" />
+			<slicingoptions includefeatures="true" followstrict="true" latestversiononly="true" />
 
 			<iu id="org.eclipse.mylyn_feature.feature.group" />
 			<iu id="org.eclipse.mylyn.context_feature.feature.group" />
