JBIDE-7857 ModeShape preferences should match the "Team"->"Ignored Resources." Deleted the file name and folder name preferences. Added an "ignored resources" preference. Changed to preference page to match the "Team" preference page and behavior.
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30589 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/modeshape/plugins/org.jboss.tools.modeshape.rest/plugin.properties
+++ b/modeshape/plugins/org.jboss.tools.modeshape.rest/plugin.properties
@@ -14,7 +14,7 @@ bundleVendor = JBoss by Red Hat
 contextMenu.label = ModeShape
 decorator.description = Decorates objects in the ModeShape View
 decorator.label = ModeShape View Decorator
-fileFiltersPreferencePage = File Filters
+ignoredResourcesPreferencePage = Ignored Resources
 modeShapeCategory = ModeShape
 preferenceInitializer = Preference Initializer for default values
 publishCommand.name = Publish
