--- a/modeshape/plugins/org.jboss.tools.modeshape.rest/src/org/jboss/tools/modeshape/rest/RestClientI18n.properties
+++ b/modeshape/plugins/org.jboss.tools.modeshape.rest/src/org/jboss/tools/modeshape/rest/RestClientI18n.properties
@@ -30,19 +30,15 @@ errorDialogTitle = Error
 errorRestoringServerRegistry = Error trying to restore the server registry from file "{0}"
 errorSavingServerRegistry = Error trying to save the server registry to "{0}"
     
-fileFiltersPreferencePageDescription = Add or remove file extensions and folder names. Files with a matching file extension or files that are contained in a folder with a matching name will NOT be published to or unpublished from repositories.
-fileFiltersPreferencePageFilteredFileExtensionsLabel = Filtered File Extensions:
-fileFiltersPreferencePageFilteredFolderNamesLabel = Filtered Folder Names:
-fileFiltersPreferencePageMessage = File Filters
-fileFiltersPreferencePageTitle = File Filters
+ignoredResourcesPreferencePageDescription = Use this page to specify a list of file and folder name patterns to exclude from publishing operations. \n\nIgnore Patterns:
+ignoredResourcesPreferencePageLabel = Ignore Patterns:
+ignoredResourcesPreferencePageMessage = Ignored Resources
+ignoredResourcesPreferencePageTitle = Ignored Resources
 
 missingImage = The following image cannot be found "{0}"
 
-newFilteredFileExtensionDialogLabel = File extension:
-newFilteredFileExtensionDialogTitle = New Filtered File Extension
-    
-newFilteredFolderNameDialogLabel = Folder name:
-newFilteredFolderNameDialogTitle = New Filtered Folder Name
+newIgnoredResourceDialogLabel = Enter a file name or folder name (* = any string, ? = and character):
+newIgnoredResourceDialogTitle = New Ignore Pattern
 
 newItemDialogValueExists = Value already exists
 
@@ -109,8 +105,8 @@ publishPageNewServerButton = New...
 publishPageNoAvailableRepositoriesStatusMsg = There are no repositories available on that server, or a \nconnection to the server cannot be made.
 publishPageNoAvailableServersStatusMsg = A server must be created first
 publishPageNoAvailableWorkspacesStatusMsg = There are no JCR workspaces available on that server and repository, or a \nconnection to the server cannot be made.
-publishPageNoResourcesToPublishStatusMsg = There are no files that can be published (may be due to your file filter preferences).
-publishPageNoResourcesToUnpublishStatusMsg = There are no files that can be unpublished
+publishPageNoResourcesToPublishStatusMsg = There are no files that can be published (may be due to your ignored resources preference).
+publishPageNoResourcesToUnpublishStatusMsg = There are no files that can be unpublished (may be due to your ignored resources preference).
 publishPageOpenPreferencePageLink = ( change default in your <a>preferences</a> )
 publishPagePublishOkStatusMsg = Choose the location of the JCR repository where your local files \nand folders will be published, and then click "Finish."
 publishPagePublishResourcesLabel = These files were selected and will be published:
