--- a/modeshape/plugins/org.jboss.tools.modeshape.rest/src/org/jboss/tools/modeshape/rest/preferences/prefs.properties
+++ b/modeshape/plugins/org.jboss.tools.modeshape.rest/src/org/jboss/tools/modeshape/rest/preferences/prefs.properties
@@ -10,14 +10,10 @@
 # individual contributors.
 #
 
-# This properties file is read in by PreferenceInitializer and contains preference default values. The delimiter values are used 
-# when the preference values are stored and the valid character values are used by the field editors when they validate user input.
-
-fileExtension.delimiter = ,
-fileExtension.invalidChars = *?<>|/\:;.
-
-folderName.delimiter = ,
-folderName.invalidChars = *?<>|/\:;
+# This properties file is read in by PreferenceInitializer and contains preference default values.
 
 # indicates if ModeShape server should version resources
-enableVersioning = false
+modeShape.preference.enableResourceVersioning = true
+
+# default ignored resources patterns
+modeShape.preference.ignoredResources = .svn\ntrue\n.project\ntrue\n
