JBIDE-7857 ModeShape preferences should match the "Team"->"Ignored Resources." Removed the file and folder name prefernces and added an ignored resources preference. The prefernce page was changed to match the "Team" preference page look and behavior.
git-svn-id: https://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.2.x@30595 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/modeshape/plugins/org.jboss.tools.modeshape.rest/src/org/jboss/tools/modeshape/rest/RestClientI18n.properties
+++ b/modeshape/plugins/org.jboss.tools.modeshape.rest/src/org/jboss/tools/modeshape/rest/RestClientI18n.properties
@@ -30,19 +30,15 @@ errorDialogTitle = Error
 errorRestoringServerRegistry = Error trying to restore the server registry from file "{0}"
 errorSavingServerRegistry = Error trying to save the server registry to "{0}"
     
-fileFiltersPreferencePageDescription = Add or remove file extensions and folder names. Files with a matching file extension or files that are contained in a folder with a matching name will NOT be published to or unpublished from repositories.
-fileFiltersPreferencePageFilteredFileExtensionsLabel = Filtered File Extensions:
-fileFiltersPreferencePageFilteredFolderNamesLabel = Filtered Folder Names:
-fileFiltersPreferencePageMessage = File Filters
-fileFiltersPreferencePageTitle = File Filters
+ignoredResourcesPreferencePageDescription = Use this page to specify a list of file and folder name patterns to exclude from publishing operations. \n\nIgnore Patterns:
+ignoredResourcesPreferencePageLabel = Ignore Patterns:
+ignoredResourcesPreferencePageMessage = Ignored Resources
+ignoredResourcesPreferencePageTitle = Ignored Resources
 
 missingImage = The following image cannot be found "{0}"
 
-newFilteredFileExtensionDialogLabel = File extension:
-newFilteredFileExtensionDialogTitle = New Filtered File Extension
-    
-newFilteredFolderNameDialogLabel = Folder name:
-newFilteredFolderNameDialogTitle = New Filtered Folder Name
+newIgnoredResourceDialogLabel = Enter a file name or folder name (* = any string, ? = and character):
+newIgnoredResourceDialogTitle = New Ignore Pattern
 
 newItemDialogValueExists = Value already exists
 
