https://issues.jboss.org/browse/JBIDE-8726
git-svn-id: https://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.2.x@30623 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/jst/tests/org.jboss.tools.jst.web.kb.test/build.properties
+++ b/jst/tests/org.jboss.tools.jst.web.kb.test/build.properties
@@ -2,7 +2,8 @@ output.. = bin/
 bin.includes = META-INF/,\
                projects/,\
                .,\
-               plugin.properties
+               plugin.properties,\
+               plugin.xml
 src.includes = src/,\
                projects/,\
                build.properties,\
