--- a/jst/plugins/org.jboss.tools.jst.jsp/plugin.xml
+++ b/jst/plugins/org.jboss.tools.jst.jsp/plugin.xml
@@ -295,31 +295,6 @@
    </extension>
    <extension
          point="org.eclipse.ui.menus">
-         <menuContribution locationURI="menu:sourceMenuId?after=sourceBegin">
-			<command commandId="org.eclipse.wst.sse.ui.toggle.comment"
-			         id="ToggleComment"
-			         mnemonic="%command.toggle.comment.mnemonic">
-				<visibleWhen checkEnabled="false">
-					<reference definitionId="org.jboss.tools.ui.structuredEditor"/>
-				</visibleWhen>
-			</command>
-			<command commandId="org.eclipse.wst.sse.ui.add.block.comment"
-			         id="AddBlockComment"
-			         mnemonic="%command.add.block.comment.mnemonic"
-			         style="push">
-				<visibleWhen checkEnabled="false">
-					<reference definitionId="org.jboss.tools.ui.structuredEditor"/>
-				</visibleWhen>
-			</command>
-			<command commandId="org.eclipse.wst.sse.ui.remove.block.comment"
-			         id="RemoveBlockComment"
-			         mnemonic="%command.remove.block.comment.mnemonic"
-			         style="push">
-				<visibleWhen checkEnabled="false">
-					<reference definitionId="org.jboss.tools.ui.structuredEditor"/>
-				</visibleWhen>
-			</command>
-			</menuContribution>
          <menuContribution 
                locationURI="menu:navigate?endof=show.ext">
                <command label="%Toggle.Selection.Bar"
@@ -461,36 +436,6 @@
    
        <extension
        point="org.eclipse.ui.handlers">
-       <handler
-             class="org.eclipse.wst.xml.ui.internal.handlers.ToggleCommentHandler"
-             commandId="org.eclipse.wst.sse.ui.toggle.comment">
-          <activeWhen>
-              <reference definitionId="org.jboss.tools.ui.structuredEditor"/>
-          </activeWhen>
-          <enabledWhen>
-              <reference definitionId="org.jboss.tools.ui.structuredEditor"/>
-          </enabledWhen>
-       </handler>
-       <handler
-             class="org.eclipse.wst.xml.ui.internal.handlers.AddBlockCommentHandler"
-             commandId="org.eclipse.wst.sse.ui.add.block.comment">
-          <activeWhen>
-              <reference definitionId="org.jboss.tools.ui.structuredEditor"/>
-          </activeWhen>
-          <enabledWhen>
-              <reference definitionId="org.jboss.tools.ui.structuredEditor"/>
-          </enabledWhen>
-       </handler>
-       <handler
-             class="org.eclipse.wst.xml.ui.internal.handlers.RemoveBlockCommentHandler"
-             commandId="org.eclipse.wst.sse.ui.remove.block.comment">
-          <activeWhen>
-              <reference definitionId="org.jboss.tools.ui.structuredEditor"/>
-          </activeWhen>
-          <enabledWhen>
-              <reference definitionId="org.jboss.tools.ui.structuredEditor"/>
-          </enabledWhen>
-       </handler>
        <handler
              class="org.eclipse.jst.jsp.ui.internal.handlers.JSPFindOccurrencesHandler"
              commandId="org.eclipse.wst.sse.ui.search.find.occurrences">
@@ -1106,4 +1051,30 @@
              parentId="org.eclipse.ui.contexts.window">
        </context>
     </extension>
+   <extension point="org.eclipse.core.expressions.definitions">
+		<definition id="org.eclipse.wst.jsp.ui.jspSourceContributions.definition">
+            <with variable="activeContexts">
+	           <iterate operator="or">
+	              <equals value="org.eclipse.jst.jsp.core.jspsource"/>
+	           </iterate>
+            </with>
+		</definition>
+	</extension>
+	
+	<extension point="org.eclipse.ui.menus">
+	    <menuContribution locationURI="menu:refactorMenuId">
+	       <separator name="jspRefactorBegin" visible="false"></separator>
+	       <command commandId="org.eclipse.jst.jsp.ui.refactor.rename" id="RenameElement" label="%command.jsp.refactor.rename.name" style="push">
+			   <visibleWhen checkEnabled="false">
+					<reference definitionId="org.eclipse.wst.jsp.ui.jspSourceContributions.definition"></reference>
+				</visibleWhen>
+	       </command>
+	       <command commandId="org.eclipse.jst.jsp.ui.refactor.move" id="MoveElement" label="%command.jsp.refactor.move.name" style="push">
+			   <visibleWhen checkEnabled="false">
+					<reference definitionId="org.eclipse.wst.jsp.ui.jspSourceContributions.definition"></reference>
+				</visibleWhen>
+	       </command>
+	       <separator name="jspRefactorBegin" visible="false"></separator>
+		</menuContribution>
+	</extension>
 </plugin>
