JBDS-1619, JBDS-1593, JBDS-1594 add org.eclipse.mylyn.commons.feature.group to mylyn mirror to support installing org.eclipse.egit.mylyn
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30642 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/updates/requirements/mylyn/build.xml
+++ b/download.jboss.org/jbosstools/updates/requirements/mylyn/build.xml
@@ -34,6 +34,7 @@
 			<slicingoptions includefeatures="true" followstrict="true" latestversiononly="true" />
 
 			<iu id="org.eclipse.mylyn_feature.feature.group" />
+			<iu id="org.eclipse.mylyn.commons.feature.group" />
 			<iu id="org.eclipse.mylyn.context_feature.feature.group" />
 			<iu id="org.eclipse.mylyn.wikitext_feature.feature.group" />
 
