pmd 3.2.6 site includes multiple old versions; only need the latest
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30643 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/updates/requirements/pmd/build.xml
+++ b/download.jboss.org/jbosstools/updates/requirements/pmd/build.xml
@@ -26,7 +26,7 @@
 				<repository location="${URL}" />
 			</source>
 
-			<slicingOptions includeFeatures="true" followStrict="true" />
+			<slicingoptions includefeatures="true" followstrict="true" latestversiononly="true" />
 		</p2.mirror>
 
 		<p2.publish.featuresAndBundles metadataRepository="file:${destination}/3.2.6/" artifactRepository="file:${destination}/3.2.6/" publishartifacts="true" source="${destination}/3.2.6/" compress="${compress}" />
