https://issues.jboss.org/browse/JBIDE-8752
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30656 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/jst/plugins/org.jboss.tools.jst.web.kb/plugin.properties
+++ b/jst/plugins/org.jboss.tools.jst.web.kb/plugin.properties
@@ -3,5 +3,5 @@ providerName=JBoss by Red Hat
 Bundle-Name.0 = Web KB
 # END NON-TRANSLATABLE
 
-KBProblemName=KB Problem
-KBBuilderProblemName=KB Builder Problem
+KBProblemName=EL Knowledge Base Problem
+KBBuilderProblemName=Knowledge Base Builder Problem
