--- a/requirements/jbossas/build.properties
+++ b/requirements/jbossas/build.properties
@@ -32,7 +32,11 @@ jboss60.build.name=jboss-as-distribution-6.0.0.Final
 jboss60.build.archive=${jboss60.build.name}.zip
 jboss60.build.archive.md5=81ed7c2c274881963467c11f204eedfc
 
-# http://download.jboss.org/jbossas/7.0/jboss-7.0.0.Beta3/jboss-7.0.0.Beta3.zip
+# reminder, when updating to something newer, also update:
+#   ~/trunk/as/plugins/org.jboss.ide.eclipse.as.management.as7/
+#   ~/trunk/requirements/jbossas/build.properties
+# latest downloads: http://www.jboss.org/jbossas/downloads
+# current: http://download.jboss.org/jbossas/7.0/jboss-7.0.0.Beta3/jboss-7.0.0.Beta3.zip
 jboss70.build.uri=http://download.jboss.org/jbossas/7.0/jboss-7.0.0.Beta3/
 jboss70.build.name=jboss-7.0.0.Beta3
 jboss70.build.archive=${jboss70.build.name}.zip
