--- a/xulrunner/plugins/org.mozilla.xulrunner.cocoa.macosx/pom.xml
+++ b/xulrunner/plugins/org.mozilla.xulrunner.cocoa.macosx/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<groupId>org.jboss.tools.xulrunner.plugins</groupId>
 	<artifactId>org.mozilla.xulrunner.cocoa.macosx</artifactId> 
-	<version>1.9.1.2a</version>
+	<version>1.9.2.16</version>
 	<packaging>eclipse-plugin</packaging>
 	<build>
 	   <plugins>
