JBIDE-8776 https://issues.jboss.org/browse/JBIDE-8776
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30777 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/jst/tests/org.jboss.tools.jst.web.kb.test/plugin.xml
+++ b/jst/tests/org.jboss.tools.jst.web.kb.test/plugin.xml
@@ -11,4 +11,13 @@
          </validator>
    </extension>
 
+  <extension
+       id="org.jboss.tools.jsf.KbRequire"
+       point="org.jboss.tools.jst.web.kb.KbRequire">
+       <require
+             description="%KB_REQUIRED_FOR_FACET"
+             forNature="org.eclipse.wst.common.project.facet.core.nature">
+       </require>
+ </extension>
+
 </plugin>
