backport changes in trunk to 3.2.x branch: add jbossepp builder, jbossas6/7 builders, new 'if avail local then copy instead of wget' logic, and .gitignore file
git-svn-id: https://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.2.x@30853 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/requirements/jbossas/build.properties
+++ b/requirements/jbossas/build.properties
@@ -1,5 +1,5 @@
-#jbossas.build.uri=http://downloads.sourceforge.net/sourceforge/jboss
 jbossas.build.uri=http://repository.jboss.org/sourceforge
+jbossas.build.uri2=http://downloads.sourceforge.net/sourceforge/jboss
 
 jboss32.build.uri=${jbossas.build.uri}
 jboss32.build.name=jboss-3.2.8.SP1
@@ -25,3 +25,20 @@ jboss51.build.uri=${jbossas.build.uri}
 jboss51.build.name=jboss-5.1.0.GA
 jboss51.build.archive=${jboss51.build.name}.zip
 jboss51.build.archive.md5=78322c75ca0c13002a04418b4a8bc920
+
+# repository.jboss.org is now read-only, so pull from SF.net directly
+jboss60.build.uri=${jbossas.build.uri2}
+jboss60.build.name=jboss-as-distribution-6.0.0.Final
+jboss60.build.archive=${jboss60.build.name}.zip
+jboss60.build.archive.md5=81ed7c2c274881963467c11f204eedfc
+
+# reminder, when updating to something newer, also update:
+#   ~/trunk/as/plugins/org.jboss.ide.eclipse.as.management.as7/
+#   ~/trunk/requirements/jbossas/build.properties
+# latest downloads: http://www.jboss.org/jbossas/downloads
+# current: http://download.jboss.org/jbossas/7.0/jboss-7.0.0.Beta3/jboss-7.0.0.Beta3.zip
+jboss70.build.uri=http://download.jboss.org/jbossas/7.0/jboss-7.0.0.Beta3/
+jboss70.build.name=jboss-7.0.0.Beta3
+jboss70.build.archive=${jboss70.build.name}.zip
+jboss70.build.archive.md5=c2fbe3c6828a8f740930b961f45792cf
+
