--- a/requirements/build.xml
+++ b/requirements/build.xml
@@ -3,14 +3,69 @@
 	<import file="buildRequirements.xml" />
 
 	<property name="requirement.root" value="${basedir}" />
-	<property name="requirement.download.root" value="${basedir}/download" />
-	<property name="requirement.build.root" value="${basedir}/target" />
-	
+	<property name="requirement.download.root" value="${requirement.root}/download" />
+	<property name="requirement.build.root" value="${requirement.root}/target" />
 	<condition property="skipRequirementBuild">
 		<equals arg1="${maven.test.skip}" arg2="true"/>
 	</condition>
-	
-	<target name="default" description="description" unless="skipRequirementBuild">
+
+	<target name="all" description="fetch all requirements defined by subdirs with a build.properties file">
+		<if>
+			<not>
+				<isset property="requirements" />
+			</not>
+			<then>
+				<var name="requirements" value="" />
+			</then>
+		</if>
+		<!-- get all subdirs, and check each one for a build.properties file -->
+		<for param="subdir">
+			<path>
+				<dirset dir="${basedir}" excludes="bin, download, generic, lib, target" />
+			</path>
+			<sequential>
+				<if>
+					<available file="@{subdir}/build.properties" />
+					<then>
+						<basename file="@{subdir}" property="subdir" />
+						<var name="requirements" value="${requirements},${subdir}" />
+						<var name="subdir" unset="true" />
+					</then>
+				</if>
+			</sequential>
+		</for>
+		<!-- remove prefix comma -->
+		<propertyregex defaultvalue="${requirements}" input="${requirements}" replace="\1" regexp=",(.+)" override="true" property="requirements" />
+
+		<echo>requirements=${requirements}</echo>
+		<echo>unzipto=${requirement.build.root}</echo>
+		<buildRequirements requirements="${requirements}" unzipto="${requirement.build.root}" />
+	</target>
+
+	<!-- if there's a mirror of the requirements stuff outside hudson, use that instead; else work in local workspace -->
+	<target name="default" description="to fetch 1 or more requirement(s), set -Drequirements=one,two,three" unless="skipRequirementBuild">
+		<!-- https://jira.jboss.org/jira/browse/JBQA-3313 Use static, shared space outside workspace, instead of fetching directly to the workspace -->
+		<var name="static_build_env.jbds.requirements" value="/home/hudson/static_build_env/jbds/requirements" />
+		<if>
+			<available file="${static_build_env.jbds.requirements}" type="dir" />
+			<then>
+				<for list="${requirements}" param="requirement">
+					<sequential>
+						<!-- if /home/hudson/static_build_env/jbds/requirements/download/jbossas/ exists, copy into 
+						${WORKSPACE}/requirements/download/jbossas/ so no need to re-download zips -->
+						<if>
+							<available file="${static_build_env.jbds.requirements}/download/@{requirement}" />
+							<then>
+								<copy todir="${requirement.download.root}/@{requirement}">
+									<fileset dir="${static_build_env.jbds.requirements}/download/@{requirement}" />
+								</copy>
+							</then>
+						</if>
+					</sequential>
+				</for>
+			</then>
+		</if>
+
 		<echo>maven.test.skip=${maven.test.skip}</echo>
 		<echo>settings.offline=${settings.offline}</echo>
 		<echo>requirements=${requirements}</echo>
