https://issues.jboss.org/browse/JBIDE-8619 , MenuContributionItem was replaced by Handler and Command.
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30868 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/jst/plugins/org.jboss.tools.jst.jsp/plugin.xml
+++ b/jst/plugins/org.jboss.tools.jst.jsp/plugin.xml
@@ -365,17 +365,13 @@
         </menuContribution>
          <menuContribution 
 			locationURI="popup:org.jboss.tools.jst.jsp.jspeditor.JSPTextEditor.source.EditorContext?after=org.jboss.tools.jst.jsp.i18n.ExternalizeAllStringsContributionItem">
-        	<dynamic
-               class="org.jboss.tools.jst.jsp.i18n.ExternalizeStringsContributionItem"
-               id="org.jboss.tools.jst.jsp.i18n.ExternalizeStringsContributionItem">
-        	</dynamic>
+			<command
+         		commandId="org.jboss.tools.jst.jsp.commands.i18" />
         </menuContribution>
         <menuContribution
               locationURI="popup:org.jboss.tools.jst.jsp.jspeditor.HTMLTextEditor.source.EditorContext?after=org.jboss.tools.jst.jsp.i18n.ExternalizeAllStringsContributionItem">
-        	<dynamic
-               class="org.jboss.tools.jst.jsp.i18n.ExternalizeStringsContributionItem"
-               id="org.jboss.tools.jst.jsp.i18n.ExternalizeStringsContributionItem">
-        	</dynamic>
+              <command
+         		commandId="org.jboss.tools.jst.jsp.commands.i18" />
         </menuContribution>
         <menuContribution
               locationURI="menu:sourceMenuId?after=OccurencesFile">
