--- a/bpel/plugins/org.eclipse.bpel.ui/plugin.properties
+++ b/bpel/plugins/org.eclipse.bpel.ui/plugin.properties
@@ -50,7 +50,7 @@ COMPONENT_NAME=Process
 COMPONENT_DESCRIPTION=Business Process
 
 NEW_BPEL_CATEGORY=BPEL 2.0
-NEW_BPEL_FILE=New BPEL Process File
+NEW_BPEL_FILE=BPEL Process File
 EXPORT_AS_IMAGE_TOOLTIP=Export BPEL as image...
 EXPORT_AS_IMAGE_LABEL=Export as Image...
 
