JBIDE-8813 https://issues.jboss.org/browse/JBIDE-8813
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30921 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/esb/plugins/org.jboss.tools.esb.ui/plugin.xml
+++ b/esb/plugins/org.jboss.tools.esb.ui/plugin.xml
@@ -36,7 +36,7 @@
 
    <extension id="e" name="XML Editors" point="org.jboss.tools.common.model.ui.xmlEditor">
       <xmlEditor 
-            class="org.jboss.tools.jst.web.ui.editors.WebCompoundEditor" 
+            class="org.jboss.tools.esb.ui.editor.ESBCompoundEditor" 
             contributorClass="org.jboss.tools.common.model.ui.texteditors.MultiPageContributor" 
             entities="FileESB101,FileESB110,FileESB120,FileESB130" 
             icon="images/xstudio/editors/esb.gif" 
